--- a/网址大全.html
+++ b/网址大全.html
@@ -3,6 +3,7 @@
 	<title>网址大全 - Xthoa Frontend</title>
 	<link rel="stylesheet" type="text/css" href="网址大全.css" />
 	<script src="网址大全.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 </head>
 <body>
 	<nav id="Navigation">
