add awards, fix leftcol-sm

--- a/index.html
+++ b/index.html
@@ -51,15 +51,51 @@
             </div>
         </div>
         <div class="row" id="mainrow">
-            <div class="d-sm-none d-md-block col-3" id="leftcol">
+            <div class="d-none d-md-block col-3" id="leftcol">
                 <div class="card" id="left-info">
-                    <div class="card-header" data-bs-toggle="collapse" data-bs-target="#header-stat-text">
+                    <div class="card-header" data-bs-toggle="collapse" data-bs-target="#left-info-text">
                         <span class="lang-en">Information</span>
                         <span class="lang-ch">详细信息</span>
                     </div>
-                    <div class="card-body collapse show" id="header-stat-text">
+                    <div class="card-body collapse show" id="left-info-text">
                         <span class="lang-en">Email: 2733793945@qq.com</span>
                         <span class="lang-ch">邮箱: 2733793945@qq.com</span>
+                    </div>
+                </div>
+                <div class="card" id="left-awards">
+                    <div class="card-header" data-bs-toggle="collapse" data-bs-target="#left-awards-text">
+                        <span class="lang-en">Honors & Awards</span>
+                        <span class="lang-ch">荣誉</span>
+                    </div>
+                    <div class="card-body collapse" id="left-awards-text">
+                        <span class="lang-en">
+                        <ul>
+                            <li>Merit Student</li>
+                            <li>Advanced Individual</li>
+                            <li>Outstanding Contribution</li>
+                            <li>The Asia International Mathematical Olympaid Open Contest (AIMO) 2017: <strong>Silver</strong></li>
+                            <li>The 1st Yangtze River Delta Youth AI Olympic Challenge (YAIOC) 2021: <strong>Third prize</strong></li>
+                            <li>The Birth of a Software -- Future Engineer Contest of Xuhui District 2022: <strong>Third prize</strong></li>
+                            <li>LeetCode 287th Weekly Contest: <strong>Front 10%</strong></li>
+                        </ul>
+                    </span>
+                        <span class="lang-ch">
+                        <h4>校内成就</h4>
+                        <p>
+                            职位：英语、数学课代表、电脑管理员
+                            <br>
+                            荣誉：孝敬之星、服务之星、三好积极分子、新时代好少年
+                        </p>
+                        <h4>校外荣誉</h4>
+                        <ul>
+                            <li>亚洲国际数学奥林匹克公开赛 <strong>银奖</strong></li>
+                            <li>街道“文明小使者”称号</li>
+                            <li>“我为祖国点赞”主题征文活动 <strong>二等奖</strong></li>
+                            <li>长三角青少年人工智能奥林匹克挑战赛 <strong>三等奖</strong></li>
+                            <li>徐汇区未来工程师大赛 <strong>三等奖</strong></li>
+                            <li>LeetCode算法周赛(287th) <strong>全球前10%</strong>名次</li>
+                        </ul>
+                    </span>
                     </div>
                 </div>
             </div>
@@ -273,36 +309,7 @@
                                 <span class="lang-en">Honors & Awards</span>
                                 <span class="lang-ch">荣誉</span>
                             </h3>
-                            <div class="container">
-                                <span class="lang-en">
-                                <ul>
-                                    <li>Merit Student</li>
-                                    <li>Advanced Individual</li>
-                                    <li>Outstanding Contribution</li>
-                                    <li>The Asia International Mathematical Olympaid Open Contest (AIMO) 2017: <strong>Silver</strong></li>
-                                    <li>The 1st Yangtze River Delta Youth AI Olympic Challenge (YAIOC) 2021: <strong>Third prize</strong></li>
-                                    <li>The Birth of a Software -- Future Engineer Contest of Xuhui District 2022: <strong>Third prize</strong></li>
-                                    <li>LeetCode 287th Weekly Contest: <strong>Front 10%</strong></li>
-                                </ul>
-                            </span>
-                                <span class="lang-ch">
-                                <h4>校内成就</h4>
-                                <p>
-                                    职位：英语、数学课代表、电脑管理员
-                                    <br>
-                                    荣誉：孝敬之星、服务之星、三好积极分子、新时代好少年
-                                </p>
-                                <h4>校外荣誉</h4>
-                                <ul>
-                                    <li>亚洲国际数学奥林匹克公开赛 <strong>银奖</strong></li>
-                                    <li>街道“文明小使者”称号</li>
-                                    <li>“我为祖国点赞”主题征文活动 <strong>二等奖</strong></li>
-                                    <li>长三角青少年人工智能奥林匹克挑战赛 <strong>三等奖</strong></li>
-                                    <li>徐汇区未来工程师大赛 <strong>三等奖</strong></li>
-                                    <li>LeetCode算法周赛(287th) <strong>全球前10%</strong>名次</li>
-                                </ul>
-                            </span>
-                            </div>
+                            
                         </div>
                     </div>
 
